--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@ body {
     background-color: #fff;
 }
 
+
+
 h1 {
-    color: greenyellow;
+    color: rgb(0, 183, 255);
     padding: 5px 10px;
     margin: 10px;
 
@@ -30,6 +32,18 @@ h2 {
     margin: 10px;
 }
 
-footer {
+
+
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #333;
     text-align: center;
 }
+
+
+
